--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,31 @@
 services:
-  mysql:
-    image: 'mysql:latest'
-    environment:
-      - 'MYSQL_DATABASE=mydatabase'
-      - 'MYSQL_PASSWORD=secret'
-      - 'MYSQL_ROOT_PASSWORD=verysecret'
-      - 'MYSQL_USER=myuser'
+  
+  database:
+    image: 'mysql:8.4'
     ports:
-      - '3306'
+      - "3307:3306"
+    volumes:
+      # MySQL 데이터 영속화
+      - mysql_data:/var/lib/mysql
+      # 초기 스키마/데이터 스크립트 자동 실행용 (선택)
+      # - ./mysql-init:/docker-entrypoint-initdb.d
+    environment:
+      # 최초 생성될 기본 데이터베이스
+      MYSQL_DATABASE: local_db
+      MYSQL_USER: app_user
+      MYSQL_PASSWORD: app_user_password
+      MYSQL_ROOT_PASSWORD: rootpassword
+      # 서버 기본 타임존 설정 (Spring/JPA 시간 이슈 예방)
+      TZ: Asia/Seoul
+    command:
+      - --character-set-server=utf8mb4
+      - --collation-server=utf8mb4_unicode_ci
+      - --default-time-zone=+09:00
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+volumes:
+  mysql_data:
