--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ repositories {
 
 dependencies {
     // spring boot
+    implementation('org.springframework.boot:spring-boot-starter-web') { // undertow 사용을 위한 web starter에서 tomcat 제외
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
+    }
+    implementation 'org.springframework.boot:spring-boot-starter-undertow'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
