--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,27 @@
-#spring.application.name=spring-boot-monolithic-starter
-
 server:
   port: 8080
+  #undertow:
+  #  accesslog:                        # Undertow 액세스 로그 설정 (필요시 활성화)
+  #    enabled: true                   # 로그 기록 활성화
+  #    pattern: "%h %t %r %s %b %Dms"  # [IP] [시간] [요청라인] [상태] [크기] [소요시간]
 
 spring:
-
   application:
     name: spring-boot-monolithic-starter
 
+  servlet:
+    multipart:
+      max-file-size: 10MB        # 파일 하나당 10MB
+      max-request-size: 100MB    # 전체 요청 100MB
+
+  web:
+    resources:
+      static-locations: classpath:/static/
+
   datasource:
-    url: jdbc:mysql://localhost:3307/local_db?useSSL=false&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
-    username: app_user
-    password: app_user_password
+    url: ${DB_URL:jdbc:mysql://localhost:3307/local_db?useSSL=false&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true}
+    username: ${DB_USERNAME:app_user}
+    password: ${DB_PASSWORD:app_user_password}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
@@ -26,8 +36,20 @@ spring:
 
 logging:
   level:
-
     org.springframework: INFO
-
     org.hibernate.SQL: debug              # 실행 쿼리 출력
     org.hibernate.orm.jdbc.bind: trace    # 파라미터 바인딩 값 출력 (Hibernate 6 이상)
+
+springdoc:
+  # Swagger UI 접속 경로를 변경 (예: localhost:8080/swagger-ui.html)
+  swagger-ui:
+    path: /swagger-ui.html
+    # API 목록을 알파벳 순으로 정렬
+    operations-sorter: alpha
+    tags-sorter: alpha
+  # OpenAPI JSON 스펙 파일 경로
+  api-docs:
+    path: /api-docs
+  # 컨트롤러 패키지의 모든 경로를 스캔하도록 설정
+  packages-to-scan: com.example.demolog.controller
+  paths-to-match: /api/**
